[package]
name = "rstxtar"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A Rust implementation of the txtar Go package"
repository = "https://github.com/torgebo/rstxtar"

[dependencies]
clean-path = "0.2.1"
thiserror = "2.0.11"

[dev-dependencies]
assert_fs = "1.1.2"
predicates = "3.1.3"

[lints.rust]
unsafe_code = "forbid"
